--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,1 @@
-theme: jekyll-theme-slate
-<link rel="icon" href="https://avatars1.githubusercontent.com/u/37028298?s=200&v=4" type="image/x-icon">
+remote_theme: TaylanTatli/Moon
